[project]
name = "langgraphv1"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "arxiv<2.4.1",
    "beautifulsoup4>=4.13.5",
    "chromadb>=1.1.0",
    "duckduckgo-search>=8.1.1",
    "faiss-cpu>=1.14.3",
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "langchain>=1.3.11",
    "langchain-anthropic>=1.4.8",
    "langchain-arxiv>=0.1.0",
    "langchain-community>=0.4.2",
    "langchain-core>=1.4.8",
    "langchain-google-genai>=4.2.6",
    "langchain-groq>=1.1.3",
    "langchain-openai>=1.3.3",
    "langchain-tavily>=0.2.18",
    "langgraph>=1.2.7",
    "langgraph-cli[inmem]>=0.4.30",
    "langgraph-sdk>=0.4.2",
    "lxml>=6.0.1",
    "pydantic>=2.13.4",
    "pymupdf>=1.26.4",
    "pypdf>=6.0.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.1.0",
    "tavily-python>=0.7.12",
    "tiktoken>=0.13.0",
    "unstructured>=0.18.13",
    "wikipedia>=1.4.0",
]
